--- a/LastCigarette/Main.storyboard
+++ b/LastCigarette/Main.storyboard
@@ -237,35 +237,35 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="gT9-2s-x6f">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="NFc-FR-1Cl">
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="gT9-2s-x6f" id="clc-Qs-xHS">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="NFc-FR-1Cl" id="9R7-HC-hRh">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No. smoked per day" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rgZ-Gr-h9S">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No. smoked per day" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y8E-6w-1u3">
                                                     <rect key="frame" x="15" y="11" width="148" height="21"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="21" id="tzI-OC-z5H"/>
+                                                        <constraint firstAttribute="height" constant="21" id="1Ye-e6-OVv"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Edit" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jHy-7g-Bd5">
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Edit" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zCW-V5-uiT">
                                                     <rect key="frame" x="171" y="7" width="412" height="30"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="30" id="xfO-fF-dap"/>
+                                                        <constraint firstAttribute="height" constant="30" id="CO6-IX-IWg"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="next"/>
                                                 </textField>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="jHy-7g-Bd5" secondAttribute="trailing" constant="15" id="1tF-6V-jEP"/>
-                                                <constraint firstAttribute="centerY" secondItem="jHy-7g-Bd5" secondAttribute="centerY" id="3Qt-pM-cg7"/>
-                                                <constraint firstItem="rgZ-Gr-h9S" firstAttribute="leading" secondItem="clc-Qs-xHS" secondAttribute="leading" constant="15" id="9cS-XO-hjL"/>
-                                                <constraint firstAttribute="centerY" secondItem="rgZ-Gr-h9S" secondAttribute="centerY" id="Oii-TC-7KR"/>
-                                                <constraint firstItem="jHy-7g-Bd5" firstAttribute="leading" secondItem="rgZ-Gr-h9S" secondAttribute="trailing" constant="10" id="epc-qh-tNH"/>
+                                                <constraint firstAttribute="centerY" secondItem="zCW-V5-uiT" secondAttribute="centerY" id="4zV-gn-g1G"/>
+                                                <constraint firstAttribute="centerY" secondItem="Y8E-6w-1u3" secondAttribute="centerY" id="7vP-tG-hpP"/>
+                                                <constraint firstItem="zCW-V5-uiT" firstAttribute="leading" secondItem="Y8E-6w-1u3" secondAttribute="trailing" constant="10" id="APb-0d-cVE"/>
+                                                <constraint firstAttribute="trailing" secondItem="zCW-V5-uiT" secondAttribute="trailing" constant="15" id="dbs-o0-CcH"/>
+                                                <constraint firstItem="Y8E-6w-1u3" firstAttribute="leading" secondItem="9R7-HC-hRh" secondAttribute="leading" constant="15" id="y4w-6h-o3F"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -445,7 +445,7 @@
                         <outlet property="labelQuitDate" destination="ZyG-fp-x4d" id="g0M-Md-1ce"/>
                         <outlet property="textFieldCostPerPack" destination="1Zs-ED-A0W" id="a0G-sF-0Yf"/>
                         <outlet property="textFieldNumberOfCigarettesPerPack" destination="BEW-F0-0rk" id="TEW-02-gJe"/>
-                        <outlet property="textFieldNumberSmokedPerDay" destination="jHy-7g-Bd5" id="5tx-IM-sFW"/>
+                        <outlet property="textFieldNumberSmokedPerDay" destination="zCW-V5-uiT" id="v30-eu-c0f"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ac9-8Z-8sH" userLabel="First Responder" sceneMemberID="firstResponder"/>
