--- a/LastCigarette/Main.storyboard
+++ b/LastCigarette/Main.storyboard
@@ -22,9 +22,6 @@
                                 <state key="normal" title="OK, Gotcha!">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
-                                <connections>
-                                    <segue destination="E0Q-E5-03Y" kind="presentation" id="vA0-pn-GCy"/>
-                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -76,7 +73,7 @@
         <!--Settings-->
         <scene sceneID="5Fe-gL-h1W">
             <objects>
-                <tableViewController id="E0Q-E5-03Y" customClass="RJSettingsViewController" customModule="LastCigarette" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="SettingsStoryboard" id="E0Q-E5-03Y" customClass="RJSettingsViewController" customModule="LastCigarette" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="sMb-DJ-JZf">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -335,7 +332,7 @@
         <!--About View Controller-->
         <scene sceneID="8uG-Mh-r9Z">
             <objects>
-                <viewController id="a6j-z5-803" customClass="RJAboutViewController" customModule="LastCigarette" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AboutStoryboard" id="a6j-z5-803" customClass="RJAboutViewController" customModule="LastCigarette" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="REu-Vd-BbK"/>
                         <viewControllerLayoutGuide type="bottom" id="CDk-Qa-SVM"/>
@@ -353,7 +350,7 @@
         <!--Navigation Controller-->
         <scene sceneID="AFR-sc-ebK">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="6qA-l7-wLh" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="SettingsNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="6qA-l7-wLh" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Kxt-d6-UbX">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -372,7 +369,4 @@
     <resources>
         <image name="IOS7 Gear Outline Icon" width="22" height="22"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="vA0-pn-GCy"/>
-    </inferredMetricsTieBreakers>
 </document>
